--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,10 +7,59 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+
  .scorpion, .scorpion:hover {
    color:yellow;
    
  }
+
+ .arthropod-species-select {
+  margin-left: 2em;
+  width: 60%;
+}
+
+ .arthropodiac-icon-home {
+   height: 4em;
+   width: 5em;
+   background-size: cover;
+ }
+ .arthropodiac-hr-carousel {
+   margin-left: auto;
+ }
+ .arthropodiac-tab-selectors {
+   margin-bottom: 2em;
+   margin-top: 1em;
+ }
+
+ .arthropodiac-muted {
+  color: #38383A;
+ }
+
+ .arthropodiac-home {
+   color: #38383A;
+   text-decoration: none;
+   margin-right: 2em;
+ }
+ .arthropodiac-home:hover{
+  color: black;
+  text-decoration: none;
+ }
+
+ 
+ .arthropodiac-tab-selector {
+  margin-left: 1em;
+ }
+ .item-carousel {
+  transition: transform 0.6s ease-in-out;
+ }
+
+ .item-carousel-controller {
+   text-align:center;
+ }
+ .cntrl-left:hover, .cntrl-right:hover {
+   cursor: pointer;
+ }
+
  .spider, .spider:hover {
   color:#800000;
  }
@@ -114,6 +163,7 @@ h5,
 h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
+  color: #DA9100;
 }
 
 p {
@@ -470,10 +520,10 @@ h6,
 }
 
 hr {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
   border: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
+  width: 15em;
+  margin-left: 0;
 }
 
 small,
@@ -2671,7 +2721,7 @@ textarea.form-control.is-invalid {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #212529;
+  color: white;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
@@ -2680,6 +2730,7 @@ textarea.form-control.is-invalid {
       -ms-user-select: none;
           user-select: none;
   background-color: transparent;
+  margin-left:1em;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 0.9rem;
@@ -2695,7 +2746,7 @@ textarea.form-control.is-invalid {
 }
 
 .btn:hover {
-  color: #212529;
+  color: #DA9100;
   text-decoration: none;
 }
 
@@ -2708,6 +2759,7 @@ textarea.form-control.is-invalid {
 .btn.disabled,
 .btn:disabled {
   opacity: 0.65;
+  cursor: auto;
 }
 
 a.btn.disabled,
@@ -2717,21 +2769,21 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #3490dc;
-  border-color: #3490dc;
+  background-color: #1B3E1B;
+  border-color: #1B3E1B;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #227dc7;
-  border-color: #2176bd;
+  background-color: #DA9100;
+  border-color: #DA9100;
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #227dc7;
-  border-color: #2176bd;
+  background-color: #1B3E1B;
+  border-color: #1B3E1B;
   box-shadow: 0 0 0 0.2rem rgba(82, 161, 225, 0.5);
 }
 
@@ -2758,14 +2810,14 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  background-color: #38383A;
+  border-color: #38383A;
 }
 
 .btn-secondary:hover {
   color: #fff;
-  background-color: #5a6268;
-  border-color: #545b62;
+  background-color: #DA9100;
+  border-color:  #DA9100;
 }
 
 .btn-secondary:focus,
@@ -4987,6 +5039,8 @@ input[type=button].btn-block {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
+  margin-left: 1em;
+  box-shadow: .25em .5em 1em .5em #888888;
 }
 
 .card > hr {
@@ -5510,7 +5564,7 @@ a.badge-dark.focus {
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: #343a40;
+  background-color: #1B3E1B;
   color: white;
   border-radius: 0.3rem;
 }
