--- a/public/css/chess.css
+++ b/public/css/chess.css
@@ -22,6 +22,15 @@
    
 }
 
+.square {
+    width:45px;
+    height:45px;
+    z-index: 300;
+    background-color: yellow;
+    opacity: .5;
+    position: absolute;
+}
+
 .a8 {transform: translate(0, 0);}
 .b8 {transform: translate(100%, 0);}
 .c8 {transform: translate(200%, 0);}
