--- a/public/css/chess.css
+++ b/public/css/chess.css
@@ -12,7 +12,6 @@
     
 }
 .piece {
-    background-image: url(/images/rightstinger2.png);
     width: 45px;
     height: 45px;
     position: absolute;
@@ -21,12 +20,64 @@
     z-index: 500;
    
 }
+.black-knight {
+    background-image: url(/images/black-knight.png);
+}
+.white-knight {
+    background-image: url(/images/white-knight.png);
+}
+
+.black-bishop {
+    background-image: url(/images/black-bishop.png);
+}
+.white-bishop {
+    background-image: url(/images/white-bishop.png);
+}
+
+.black-pawn {
+    background-image: url(/images/rightstinger2.png);
+}
+.white-pawn {
+    background-image: url(/images/rightstinger2.png);
+}
+
+.black-rook {
+    background-image: url(/images/rightstinger2.png);
+}
+.white-rook {
+    background-image: url(/images/rightstinger2.png);
+}
+
+.black-queen {
+    background-image: url(/images/rightstinger2.png);
+}
+.white-queen {
+    background-image: url(/images/rightstinger2.png);
+}
+
+.black-king {
+    background-image: url(/images/rightstinger2.png);
+}
+.white-king {
+    background-image: url(/images/rightstinger2.png);
+}
+
+
 
 .square {
     width:45px;
     height:45px;
     z-index: 300;
     background-color: yellow;
+    opacity: .5;
+    position: absolute;
+}
+
+.square-attack {
+    width:45px;
+    height:45px;
+    z-index: 300;
+    background-color: red;
     opacity: .5;
     position: absolute;
 }
