--- a/public/css/app.css
+++ b/public/css/app.css
@@ -78,7 +78,12 @@
  .spider, .spider:hover {
   color:#800000;
  }
-
+  .hr-card {
+    width:auto;
+    height:3px;
+    top: 2px;
+    margin-bottom:10px;
+  }
 .searchbar {
   border:none;
   color:#800000;
@@ -5044,18 +5049,26 @@ input[type=button].btn-block {
   color: #fff;
 }
 
+.card-row {
+  padding:0px;
+  width:15em;
+  height:12em;
+}
+
 .card {
   position: relative;
-  display: flex;
+  display: block;
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
-  margin-left: 1em;
-  box-shadow: .25em .5em 1em .5em #888888;
+  /*border-radius: 0.25rem;*/
+  margin: .2em;
+  margin-top: 0em;
+  margin-bottom: .15em;
+  /*box-shadow: .25em .5em 1em .5em #888888;*/
 }
 
 .card > hr {
