changing focus from scorpions to fish and plants

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -171,7 +171,7 @@ hr {
   top: 20px; 
   border: none; 
   height: 7px; 
-  background: #343a40; 
+  background: #b987a7; 
   margin-bottom: 50px; 
 }
 
@@ -183,7 +183,7 @@ h5,
 h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  color: #DA9100;
+  color: #1b3e1b;
 }
 
 p {
